New eCommerce Site/full_error_2.log
Traceback (most recent call last):
  File "C:\Users\fatih\OneDrive\Masaüstü\eticaretsite\manage.py", line 22, in <module>
    main()
  File "C:\Users\fatih\OneDrive\Masaüstü\eticaretsite\manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\site-packages\django\core\management\__init__.py", line 443, in execute_from_command_line
    utility.execute()
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\site-packages\django\core\management\__init__.py", line 417, in execute
    django.setup()
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\site-packages\django\__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\site-packages\django\apps\registry.py", line 91, in populate
    app_config = AppConfig.create(entry)
                 ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\site-packages\django\apps\config.py", line 193, in create
    import_module(entry)
  File "C:\Users\fatih\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1310, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1133, in get_code
  File "<frozen importlib._bootstrap_external>", line 1063, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\fatih\OneDrive\Masaüstü\eticaretsite\apps\__init__.py", line 1
    ��
    ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xff in position 0: invalid start byte
